--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </section>
     <!--mapa-->
     <section class="map">
-        <h2>Gde nas mozete pronaci</h2>
+        <!-- <h2>Gde nas mozete pronaci</h2> -->
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29269.87729190229!2d19.816441431524428!3d45.24629090357184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475b1065ad95c021%3A0x63b0f0bb76f12209!2z0JrQvtC30LDRh9C40L3RgdC60L7QsyA1LCDQndC-0LLQuCDQodCw0LQ!5e0!3m2!1ssr!2srs!4v1643226878749!5m2!1ssr!2srs"
             width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
